src/test/ui/rfc-2632-const-trait-impl/const-drop-fail.stderr
error[E0277]: the trait bound `NonTrivialDrop: Drop` is not satisfied
  --> $DIR/const-drop-fail.rs:28:5
   |
LL |     NonTrivialDrop,
   |     ^^^^^^^^^^^^^^ the trait `Drop` is not implemented for `NonTrivialDrop`
   |
note: required by a bound in `check`
  --> $DIR/const-drop-fail.rs:19:19
   |
LL | const fn check<T: ~const Drop>(_: T) {}
   |                   ^^^^^^^^^^^ required by this bound in `check`

error[E0277]: the trait bound `ConstImplWithDropGlue: Drop` is not satisfied
  --> $DIR/const-drop-fail.rs:30:5
   |
LL |     ConstImplWithDropGlue(NonTrivialDrop),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Drop` is not implemented for `ConstImplWithDropGlue`
   |
note: required by a bound in `check`
  --> $DIR/const-drop-fail.rs:19:19
   |
LL | const fn check<T: ~const Drop>(_: T) {}
   |                   ^^^^^^^^^^^ required by this bound in `check`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
